change from markdown in model to lineNumber links